# wh_dice

./: CMakeLists.txt  README.md
include/: dice.h  dice_roll.h
src/: dice.c  dice.cpp  dice_roll.cpp  main.c  main.cpp
